Fix button spacing and input styling

--- a/src/theme/sections/bottom.styl
+++ b/src/theme/sections/bottom.styl
@@ -24,9 +24,11 @@
   #mc-embedded-subscribe-form
     display flex
     margin-bottom 2rem
+    height 40px
 
   #mce-email
   #mc-embedded-subscribe
+    appearance none
     box-sizing border-box
     display inline-block
     height 40px
@@ -45,6 +47,7 @@
       box-shadow inset 0 0 3px #4A93FF
 
   #mc-embedded-subscribe
+    background-color #FFFFFF
     color #262626
     border 1px solid #E0E0E0
     border-top-right-radius 3px
