--- a/src/theme/sections/intro.styl
+++ b/src/theme/sections/intro.styl
@@ -66,6 +66,7 @@
   .btn
     display inline-block
     flex 1
+    margin-bottom $m-spacing
 
     &:not(:last-child)
       margin-right $m-spacing
